finished first iteration styling

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "news-analyzer",
-  "homepage": "https://1ebobski.github.io/news-analyzer/main.html",
+  "name": "cv",
+  "homepage": "https://1ebobski.github.io/cv",
   "version": "0.1.0",
-  "description": "news analyzer project",
+  "description": "cv",
   "main": "./src/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
+    "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
-    "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "cross-env NODE_ENV=production gh-pages -d build"
   },
   "keywords": [],
   "author": "1ebobski",
