fix: add OpenSSL legacy provider flag for Node.js v23 compatibility

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "predeploy": "npm run build",
     "deploy": "cross-env NODE_ENV=production gh-pages -d build"
   },
