fix: update homepage URL to match new repository name

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "cv",
-  "homepage": "https://1ebobski.github.io/cv",
+  "homepage": "https://1bbsk1.github.io/cv",
   "version": "0.1.0",
   "description": "cv",
   "main": "./src/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rimraf build && webpack --mode production",
     "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "predeploy": "npm run build",
-    "deploy": "cross-env NODE_ENV=production gh-pages -d build"
+    "deploy": "cross-env NODE_ENV=production gh-pages -d build",
+    "clean": "rimraf build"
   },
   "keywords": [],
   "author": "1ebobski",
