--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
     "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development webpack-dev-server --mode development --open --watch",
-    "deploy": "cross-env NODE_ENV=production rimraf build && webpack --mode production && gh-pages -d build"
+    "deploy": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production rimraf build && webpack --mode production && gh-pages -d build"
   },
   "keywords": [],
   "author": "1bbsk1",
