fix: add openssl-legacy-provider to build script for Node.js compatibility

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "cv",
   "main": "./src/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production rimraf build && webpack --mode production",
     "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development webpack-dev-server --mode development --open --watch",
     "deploy": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production rimraf build && webpack --mode production && gh-pages -d build"
   },
