--- a/package.json
+++ b/package.json
@@ -13,27 +13,31 @@
   "author": "1bbsk1",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "~7.6.4",
-    "@babel/core": "~7.6.4",
-    "@babel/plugin-proposal-class-properties": "~7.5.5",
-    "@babel/preset-env": "~7.6.3",
-    "autoprefixer": "~9.7.0",
-    "babel-loader": "~8.0.6",
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.26.9",
+    "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
     "cross-env": "~7.0.0",
-    "css-loader": "~3.2.0",
-    "cssnano": "~4.1.10",
-    "file-loader": "~4.2.0",
-    "gh-pages": "~2.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "~6.0.0",
-    "mini-css-extract-plugin": "~0.8.0",
-    "optimize-css-assets-webpack-plugin": "~5.0.3",
-    "postcss-loader": "~3.0.0",
-    "style-loader": "~1.0.0",
-    "webpack": "~4.41.2",
-    "webpack-cli": "~3.3.9",
-    "webpack-dev-server": "~3.9.0",
-    "webpack-md5-hash": "~0.0.6"
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
+    "cssnano": "^7.0.6",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^6.3.0",
+    "html-webpack-plugin": "^5.6.3",
+    "image-minimizer-webpack-plugin": "^4.1.3",
+    "imagemin": "^9.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.99.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
     "babel-polyfill": "~6.26.0",
