Remove unnecessary --openssl-legacy-provider flag from npm scripts

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "cv",
   "main": "./src/index.js",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production rimraf build && webpack --mode production",
-    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development webpack-dev-server --mode development --open",
-    "deploy": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production rimraf build && webpack --mode production && gh-pages -d build"
+    "build": "cross-env NODE_ENV=production rimraf build && webpack --mode production",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "deploy": "cross-env NODE_ENV=production rimraf build && webpack --mode production && gh-pages -d build"
   },
   "keywords": [],
   "author": "1bbsk1",
