--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "image-minimizer-webpack-plugin": "^4.1.3",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^6.0.1",
     "webpack": "^5.99.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
